samples/_failures_safe/1761357025_266983_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b5ff9a5c.c: In function ‘main’:
./samples/SAFE/__tmp_b5ff9a5c.c:161:9: error: expected declaration or statement at end of input
  161 |         printf("No valid log entries to analyze.\n");
      |         ^~~~~~
./samples/SAFE/__tmp_b5ff9a5c.c:161:9: error: expected declaration or statement at end of input
